--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Home Assistant Simple Inventory Integration Card",
   "author": "Blaine Venturine",
   "license": "MIT",
-  "main": "dist/simple-inventory-card.js",
-  "card_type": "simple-inventory-card",
+  "main": "dist/simple-inventory-card-custom.js",
+  "card_type": "simple-inventory-card-custom",
   "repository": {
     "type": "git",
-    "url": "https://github.com/blaineventurine/simple-inventory-card.git"
+    "url": "https://github.com/blaineventurine/simple-inventory-card-custom.git"
   },
   "keywords": [
     "home-assistant",
@@ -76,3 +76,4 @@
     "tslib": "^2.8.1"
   }
 }
+
